[package]
name = "ai_studio"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/ai_studio.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
language_model.workspace = true
language_model_repository.workspace = true
language_models = { workspace = true, features = ["llamacpp"] }
log.workspace = true
reqwest_client.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
ui.workspace = true
ui_input.workspace = true
uuid.workspace = true
workspace.workspace = true
# AI Orchestration and Persistence
uide = { path = "../uide" }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "workflow_uide_demo"
path = "examples/workflow_uide_demo.rs" 