[package]
name = "alert_dialog"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/alert_dialog.rs"

[dependencies]
gpui.workspace = true
menu.workspace = true
settings.workspace = true
story = { workspace = true, optional = true }
theme.workspace = true
ui.workspace = true
workspace.workspace = true

[features]
default = []
stories = ["dep:story"]
