[package]
name = "ali_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/ali_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
db.workspace = true
fs.workspace = true
gpui.workspace = true
log.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
task.workspace = true
terminal.workspace = true
terminal_view.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
