[package]
name = "anthropic"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/anthropic.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
util.workspace = true

[dev-dependencies]
tokio.workspace = true
