[package]
name = "anthropic"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[features]
default = []
schemars = ["dep:schemars"]

[lints]
workspace = true

[lib]
path = "src/anthropic.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
http.workspace = true
isahc.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
tokio.workspace = true
